[package]
name = "git-pusher"
version = "0.1.0"
authors = ["HansBlackCat <jeremy3599@snu.ac.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.4"
failure = "0.1.6"
chrono = "0.4.10"
ansi_term = "0.12.1"
clap = "2.33.0"